cluster/applications/t3-code/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: t3-code
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: websecure-sub
  hostnames:
    - t3.maio-tech.com
  rules:
    - backendRefs:
        - name: t3-code
          port: 3773
